Fixed spacing.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ main {
 }
 @media (min-width: 300px) {
   main {
-    padding: 1.5rem;
+    padding: 3rem 1.5rem;
   }
 }
 @media (min-width: 800px) {
